--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
             left: 0;
             right: 0;
             z-index: 1000;
-            padding: 10px 0;
+            padding: 8px 0;
             transition: all 0.3s ease;
         }
 
         .header .row {
             align-items: center;
-            justify-content: center;
         }
 
         .header.scrolled {
@@ -45,15 +44,19 @@
 
         .header .social-icons {
             margin: 0;
+            display: flex;
+            justify-content: flex-end;
+            flex-wrap: nowrap;
         }
 
         .header .social-icons a {
-            width: 22px;
-            height: 22px;
-            line-height: 22px;
-            margin: 0 2px;
-            font-size: 0.6rem;
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            margin: 0 1px;
+            font-size: 0.55rem;
             background: linear-gradient(135deg, #4CAF50, #45a049);
+            flex-shrink: 0;
         }
 
         .header .social-icons a:hover {
@@ -64,11 +67,14 @@
         .header-brand {
             color: white;
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             text-decoration: none;
             transition: color 0.3s ease;
-            text-align: center;
+            text-align: left;
             display: block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .header-brand:hover {
@@ -77,7 +83,7 @@
 
         /* Hero Section */
         .hero {
-            margin-top: 60px;
+            margin-top: 50px;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #4CAF50 100%);
             min-height: 100vh;
             display: flex;
@@ -390,7 +396,8 @@
             .airplane { font-size: 4rem; top: 10%; right: 5%; }
             .country-card { margin-bottom: 1rem; }
             .contact-card { padding: 2rem; }
-            .header-brand { font-size: 0.75rem; }
+            .header { padding: 6px 0; }
+            .header-brand { font-size: 0.7rem; }
             .header .social-icons a { 
                 width: 18px; 
                 height: 18px; 
@@ -398,6 +405,7 @@
                 font-size: 0.5rem; 
                 margin: 0 1px;
             }
+            .hero { margin-top: 40px; }
         }
 
         @media (max-width: 576px) {
@@ -405,7 +413,8 @@
             .section-title h2 { font-size: 2rem; }
             .logo { width: 120px; height: 120px; }
             .logo i { font-size: 3rem; }
-            .header-brand { font-size: 0.7rem; }
+            .header { padding: 5px 0; }
+            .header-brand { font-size: 0.65rem; }
             .header .social-icons a { 
                 width: 16px; 
                 height: 16px; 
@@ -413,6 +422,18 @@
                 font-size: 0.45rem; 
                 margin: 0 1px;
             }
+            .hero { margin-top: 35px; }
+        }
+
+        @media (max-width: 480px) {
+            .header-brand { font-size: 0.6rem; }
+            .header .social-icons a { 
+                width: 14px; 
+                height: 14px; 
+                line-height: 14px; 
+                font-size: 0.4rem; 
+            }
+            .hero { margin-top: 32px; }
         }
     </style>
 </head>
@@ -421,14 +442,15 @@
     <header class="header" id="header">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-8 text-center">
+                <div class="col-7">
                     <a href="#hero" class="header-brand">Alkama Employment Agency</a>
                 </div>
-                <div class="col-4 text-end">
+                <div class="col-5">
                     <div class="social-icons">
                         <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="mailto:alkamaemploymentagencyltd@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                         <a href="tel:+254722595446" title="Phone"><i class="fas fa-phone"></i></a>
                     </div>
@@ -562,7 +584,7 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="section-title">
-                <h2>CONTACT US</h2>
+                <h2>CONTACTS</h2>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -579,14 +601,14 @@
                             <div>
                                 <strong>Address:</strong><br>
                                 Ring Road Off Parkroad (Ngara), Tigoni House, 3rd Flr, RM 28<br>
-                                P.O.BOX 1441-006 Ngara
+                                P.O.BOX 1441-006 NGARA
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <strong>Email:</strong><br>
-                                alkamaemploymentagencyltd@gmail.com / info@alikama.co.ke
+                                alkamaemploymentagencyltd@gmail.com
                             </div>
                         </div>
                     </div>
@@ -598,7 +620,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Alkama Employment Agency Limited. All rights reserved.</p>
+            <p>&copy; 2025 Alkama Employment Agency Limited. All rights reserved. | Registered with Kenya Government</p>
         </div>
     </footer>
 
