--- a/index.html
+++ b/index.html
@@ -29,12 +29,22 @@
             left: 0;
             right: 0;
             z-index: 1000;
-            padding: 8px 0;
+            padding: 4px 0;
             transition: all 0.3s ease;
+            width: 100%;
+            max-width: 100vw;
+            overflow: hidden;
+        }
+
+        .header .container {
+            max-width: 100%;
+            padding-left: 10px;
+            padding-right: 10px;
         }
 
         .header .row {
             align-items: center;
+            margin: 0;
         }
 
         .header.scrolled {
@@ -47,16 +57,18 @@
             display: flex;
             justify-content: flex-end;
             flex-wrap: nowrap;
+            gap: 1px;
         }
 
         .header .social-icons a {
-            width: 20px;
-            height: 20px;
-            line-height: 20px;
-            margin: 0 1px;
-            font-size: 0.55rem;
+            width: 16px;
+            height: 16px;
+            line-height: 16px;
+            margin: 0;
+            font-size: 0.45rem;
             background: linear-gradient(135deg, #4CAF50, #45a049);
             flex-shrink: 0;
+            border-radius: 50%;
         }
 
         .header .social-icons a:hover {
@@ -66,8 +78,8 @@
 
         .header-brand {
             color: white;
-            font-weight: 600;
-            font-size: 0.85rem;
+            font-weight: 500;
+            font-size: 0.7rem;
             text-decoration: none;
             transition: color 0.3s ease;
             text-align: left;
@@ -75,6 +87,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            max-width: 100%;
         }
 
         .header-brand:hover {
@@ -83,7 +96,7 @@
 
         /* Hero Section */
         .hero {
-            margin-top: 50px;
+            margin-top: 30px;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #4CAF50 100%);
             min-height: 100vh;
             display: flex;
@@ -396,16 +409,16 @@
             .airplane { font-size: 4rem; top: 10%; right: 5%; }
             .country-card { margin-bottom: 1rem; }
             .contact-card { padding: 2rem; }
-            .header { padding: 6px 0; }
-            .header-brand { font-size: 0.7rem; }
+            .header { padding: 3px 0; }
+            .header .container { padding-left: 8px; padding-right: 8px; }
+            .header-brand { font-size: 0.65rem; }
             .header .social-icons a { 
-                width: 18px; 
-                height: 18px; 
-                line-height: 18px; 
-                font-size: 0.5rem; 
-                margin: 0 1px;
+                width: 14px; 
+                height: 14px; 
+                line-height: 14px; 
+                font-size: 0.4rem; 
             }
-            .hero { margin-top: 40px; }
+            .hero { margin-top: 25px; }
         }
 
         @media (max-width: 576px) {
@@ -413,27 +426,39 @@
             .section-title h2 { font-size: 2rem; }
             .logo { width: 120px; height: 120px; }
             .logo i { font-size: 3rem; }
-            .header { padding: 5px 0; }
-            .header-brand { font-size: 0.65rem; }
+            .header { padding: 3px 0; }
+            .header .container { padding-left: 5px; padding-right: 5px; }
+            .header-brand { font-size: 0.6rem; }
             .header .social-icons a { 
-                width: 16px; 
-                height: 16px; 
-                line-height: 16px; 
-                font-size: 0.45rem; 
-                margin: 0 1px;
+                width: 12px; 
+                height: 12px; 
+                line-height: 12px; 
+                font-size: 0.35rem; 
             }
-            .hero { margin-top: 35px; }
+            .hero { margin-top: 22px; }
         }
 
         @media (max-width: 480px) {
-            .header-brand { font-size: 0.6rem; }
+            .header-brand { font-size: 0.55rem; }
             .header .social-icons a { 
-                width: 14px; 
-                height: 14px; 
-                line-height: 14px; 
-                font-size: 0.4rem; 
+                width: 11px; 
+                height: 11px; 
+                line-height: 11px; 
+                font-size: 0.3rem; 
             }
-            .hero { margin-top: 32px; }
+            .hero { margin-top: 20px; }
+        }
+
+        @media (max-width: 375px) {
+            .header .container { padding-left: 3px; padding-right: 3px; }
+            .header-brand { font-size: 0.5rem; }
+            .header .social-icons a { 
+                width: 10px; 
+                height: 10px; 
+                line-height: 10px; 
+                font-size: 0.28rem; 
+            }
+            .header .social-icons { gap: 0; }
         }
     </style>
 </head>
@@ -442,10 +467,10 @@
     <header class="header" id="header">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-7">
+                <div class="col-8 pe-1">
                     <a href="#hero" class="header-brand">Alkama Employment Agency</a>
                 </div>
-                <div class="col-5">
+                <div class="col-4 ps-0">
                     <div class="social-icons">
                         <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
