--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
             box-sizing: border-box;
         }
 
+        html, body {
+            overflow-x: hidden;
+            max-width: 100vw;
+            position: relative;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             line-height: 1.6;
-            overflow-x: hidden;
         }
 
         /* Header Section */
@@ -31,20 +36,22 @@
             z-index: 1000;
             padding: 4px 0;
             transition: all 0.3s ease;
-            width: 100%;
+            width: 100vw;
             max-width: 100vw;
             overflow: hidden;
         }
 
         .header .container {
-            max-width: 100%;
-            padding-left: 10px;
-            padding-right: 10px;
+            max-width: 100vw;
+            padding-left: 8px;
+            padding-right: 8px;
+            width: 100%;
         }
 
         .header .row {
             align-items: center;
             margin: 0;
+            width: 100%;
         }
 
         .header.scrolled {
@@ -94,7 +101,27 @@
             color: #4CAF50;
         }
 
-        /* Hero Section */
+        .container, .container-fluid {
+            max-width: 100vw;
+            overflow-x: hidden;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .row {
+            margin-left: 0;
+            margin-right: 0;
+            max-width: 100%;
+        }
+
+        .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12,
+        .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12,
+        .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12,
+        .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+            padding-left: 5px;
+            padding-right: 5px;
+            max-width: 100%;
+        }
         .hero {
             margin-top: 30px;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #4CAF50 100%);
@@ -410,7 +437,8 @@
             .country-card { margin-bottom: 1rem; }
             .contact-card { padding: 2rem; }
             .header { padding: 3px 0; }
-            .header .container { padding-left: 8px; padding-right: 8px; }
+            .header .container { padding-left: 5px; padding-right: 5px; }
+            .container { padding-left: 10px; padding-right: 10px; }
             .header-brand { font-size: 0.65rem; }
             .header .social-icons a { 
                 width: 14px; 
@@ -427,7 +455,8 @@
             .logo { width: 120px; height: 120px; }
             .logo i { font-size: 3rem; }
             .header { padding: 3px 0; }
-            .header .container { padding-left: 5px; padding-right: 5px; }
+            .header .container { padding-left: 3px; padding-right: 3px; }
+            .container { padding-left: 8px; padding-right: 8px; }
             .header-brand { font-size: 0.6rem; }
             .header .social-icons a { 
                 width: 12px; 
@@ -447,10 +476,12 @@
                 font-size: 0.3rem; 
             }
             .hero { margin-top: 20px; }
+            .container { padding-left: 5px; padding-right: 5px; }
         }
 
         @media (max-width: 375px) {
-            .header .container { padding-left: 3px; padding-right: 3px; }
+            .header .container { padding-left: 2px; padding-right: 2px; }
+            .container { padding-left: 3px; padding-right: 3px; }
             .header-brand { font-size: 0.5rem; }
             .header .social-icons a { 
                 width: 10px; 
