--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alkama Employment Agency Limited</title>
+    <title>Alikama Employment Agency Limited</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -499,14 +499,13 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-8 pe-1">
-                    <a href="#hero" class="header-brand">Alkama Employment Agency</a>
+                    <a href="#hero" class="header-brand">Alikama Employment Agency</a>
                 </div>
                 <div class="col-4 ps-0">
                     <div class="social-icons">
                         <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="mailto:alkamaemploymentagencyltd@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                         <a href="tel:+254722595446" title="Phone"><i class="fas fa-phone"></i></a>
                     </div>
@@ -528,7 +527,7 @@
                             <i class="fas fa-globe-americas"></i>
                         </div>
                     </div>
-                    <h1>ALKAMA EMPLOYMENT</h1>
+                    <h1>Alikama EMPLOYMENT</h1>
                     <h2>AGENCY LIMITED</h2>
                     <p class="hero-tagline">Connecting Global Talent with International Opportunities</p>
                     <a href="#contact" class="btn btn-primary btn-lg">Get Started Today</a>
@@ -617,14 +616,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>About Alkama Employment Agency</h2>
+                    <h2>About Alikama Employment Agency</h2>
                     <p>We are a leading employment agency specializing in international job placements. Our mission is to bridge the gap between talented professionals and global opportunities.</p>
                     <p>With years of experience and a network of trusted partners worldwide, we ensure that both employers and job seekers find their perfect match.</p>
                 </div>
                 <div class="col-lg-6">
                     <h3>Why Choose Us?</h3>
                     <ul class="feature-list">
-                        <li>Registered with Kenya Government</li>
+                        <li>Registered with Kenyan Government</li>
                         <li>Comprehensive pre-departure briefing</li>
                         <li>24/7 support for our candidates</li>
                         <li>Transparent process with no hidden fees</li>
@@ -640,7 +639,7 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="section-title">
-                <h2>CONTACTS</h2>
+                <h2>CONTACT US</h2>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -664,7 +663,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <strong>Email:</strong><br>
-                                alkamaemploymentagencyltd@gmail.com
+                                alkamaemploymentagencyltd@gmail.com / info@alikama.co.ke<br>
                             </div>
                         </div>
                     </div>
@@ -676,7 +675,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Alkama Employment Agency Limited. All rights reserved. | Registered with Kenya Government</p>
+            <p>&copy; 2025 Alikama Employment Agency Limited. All rights reserved.</p>
         </div>
     </footer>
 
