--- a/index.html
+++ b/index.html
@@ -656,14 +656,15 @@
                             <div>
                                 <strong>Address:</strong><br>
                                 Ring Road Off Parkroad (Ngara), Tigoni House, 3rd Flr, RM 28<br>
-                                P.O.BOX 1441-006 NGARA
+                                P.O.BOX 1441-006 Ngara
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <strong>Email:</strong><br>
-                                alkamaemploymentagencyltd@gmail.com / info@alikama.co.ke<br>
+                                alkamaemploymentagency<br>
+                                ltd@gmail.com / info@alikama.co.ke<br>
                             </div>
                         </div>
                     </div>
@@ -773,3 +774,4 @@
     </script>
 </body>
 </html>
+
