--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         /* Header Section */
         .header {
             background: rgba(30, 60, 114, 0.95);
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(1px);
             position: fixed;
             top: 0;
             left: 0;
@@ -64,15 +64,15 @@
             display: flex;
             justify-content: flex-end;
             flex-wrap: nowrap;
-            gap: 1px;
+            gap: 5px;
         }
 
         .header .social-icons a {
-            width: 16px;
-            height: 16px;
-            line-height: 16px;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
             margin: 0;
-            font-size: 0.45rem;
+            font-size: 0.7rem;
             background: linear-gradient(135deg, #4CAF50, #45a049);
             flex-shrink: 0;
             border-radius: 50%;
@@ -354,7 +354,7 @@
 
         .social-icons {
             text-align: center;
-            margin-top: 3rem;
+            margin-top: 2rem;
         }
 
         .social-icons a {
@@ -468,14 +468,14 @@
         }
 
         @media (max-width: 480px) {
-            .header-brand { font-size: 0.55rem; }
+            .header-brand { font-size: 0.75rem; }
             .header .social-icons a { 
-                width: 11px; 
-                height: 11px; 
-                line-height: 11px; 
-                font-size: 0.3rem; 
+                width: 15px; 
+                height: 15px; 
+                line-height: 15px; 
+                font-size: 0.7rem; 
             }
-            .hero { margin-top: 20px; }
+            .hero { margin-top: 10px; }
             .container { padding-left: 5px; padding-right: 5px; }
         }
 
@@ -491,6 +491,8 @@
             }
             .header .social-icons { gap: 0; }
         }
+    
+
     </style>
 </head>
 <body>
@@ -656,15 +658,14 @@
                             <div>
                                 <strong>Address:</strong><br>
                                 Ring Road Off Parkroad (Ngara), Tigoni House, 3rd Flr, RM 28<br>
-                                P.O.BOX 1441-006 Ngara
+                                P.O.BOX 1441-006 NGARA
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <strong>Email:</strong><br>
-                                alkamaemploymentagency<br>
-                                ltd@gmail.com / info@alikama.co.ke<br>
+                                alkamaemploymentagencyltd@gmail.com / info@alikama.co.ke<br>
                             </div>
                         </div>
                     </div>
@@ -774,4 +775,3 @@
     </script>
 </body>
 </html>
-
