--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
         /* Brand on the left */
         .header-brand {
-            color: #7ec737;
+            color: white;
             font-weight: 600;
-            font-size: 1.2rem;
+            font-size: 1rem;
             text-decoration: none;
             transition: color 0.3s ease;
             white-space: nowrap;
@@ -103,7 +103,7 @@
             display: flex;
             justify-content: flex-end;
             gap: 1.2rem;
-            font-size: 0.9rem;
+            font-size: 1rem;
             font-weight: 500;
             border: none;
             flex-wrap: nowrap;
@@ -129,7 +129,7 @@
         .hero {
             margin-top: 60px;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #4CAF50 100%);
-            min-height: calc(100vh - 60px);
+            min-height: calc(60vh - 50px);
             display: flex;
             align-items: center;
             position: relative;
@@ -715,7 +715,7 @@
                             <div>
                                 <strong>Address:</strong><br>
                                 Ring Road Off Parkroad (Ngara), Tigoni House, 3rd Flr, RM 28<br>
-                                P.O.BOX 1441-006 NGARA
+                                P.O.BOX 1441-006 Ngara
                             </div>
                         </div>
                         <div class="contact-item">
