--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
 
         .logo i {
             font-size: 4rem;
-            background: linear-gradient(45deg, #1e3c72, #4CAF50);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: white;
+            background: none;
+            -webkit-background-clip: unset;
+            -webkit-text-fill-color: rgba(255, 255, 255, 0.829);
+            background-clip: unset;
         }
-
         .hero-content {
             position: relative;
             z-index: 2;
@@ -208,7 +208,7 @@
             top: 20%;
             right: 10%;
             font-size: 6rem;
-            color: rgba(255, 255, 255, 0.7);
+            color: rgba(255, 255, 255, 0.829);
             animation: fly 8s linear infinite;
         }
 
